<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_info_member_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/user_info_top_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#d8dde2"
            android:text="@string/member_info_search_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#d8dde2"
            android:text="@string/member_info_search_card_type" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="15sp"
            android:textColor="#d8dde2"
            android:text="@string/member_info_search_card_balance" />

    </LinearLayout>

    <com.handmark.pulltorefresh.listview.PullToRefreshListView
            android:id="@+id/member_info_search_result_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"
            android:fadingEdge="none"
            android:listSelector="@android:color/transparent"
            android:scrollbars="@null"
            android:visibility="visible" />

</LinearLayout>
