<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_detail_bg"
    android:orientation="vertical"
    android:paddingLeft="@dimen/setting_payway_left"
    android:paddingRight="@dimen/setting_payway_left" >

    <!-- 支付类型 -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/setting_payway_show_height" >

        <TextView
            style="@style/setting_list_main_text"
            android:layout_gravity="center_vertical"
            android:text="@string/setting_payway_mode" />

        <Button
            android:id="@+id/payway_create_type"
            style="@style/setting_payway_create_button"
            android:layout_gravity="right|center_vertical"
            android:drawableRight="@drawable/ico_next_down" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/black" />
    </FrameLayout>

    <!-- 付款方式名称 -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/setting_payway_show_height" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/setting_list_main_text"
                android:text="@string/setting_payway_type_name" />

            <EditText
                android:id="@+id/payway_create_name"
                style="@style/setting_payway_create_button"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="right|center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/black" />
    </FrameLayout>

    <!-- 是否计入销售额 -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/setting_payway_show_height" >

        <TextView
            style="@style/setting_list_main_text"
            android:layout_gravity="center_vertical"
            android:text="@string/setting_payway_choice_sale" />

        <CheckBox
            android:id="@+id/payway_create_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/ico_switch"
            android:button="@drawable/ico_switch"
            android:checked="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/black" />
    </FrameLayout>

    <!-- 是否享受折扣 -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/setting_payway_show_height" >

        <TextView
            style="@style/setting_list_main_text"
            android:layout_gravity="center_vertical"
            android:text="@string/setting_payway_choice_discount" />

        <CheckBox
            android:id="@+id/payway_create_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/ico_switch"
            android:button="@drawable/ico_switch"
            android:checked="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/black" />
    </FrameLayout>

    <!-- 折扣率 -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/setting_payway_show_height" >

        <TextView
            style="@style/setting_list_main_text"
            android:layout_gravity="center_vertical"
            android:text="@string/setting_payway_discount" />

        <EditText
            android:id="@+id/payway_edit_discount"
            style="@style/setting_payway_create_button"
            android:layout_width="match_parent"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="right|center_vertical"
            android:inputType="number"
            android:maxLength="3"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/black" />
    </FrameLayout>

</LinearLayout>