<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
	        <TextView
	            android:id="@+id/date_dialog_title"
	            android:layout_width="fill_parent"
	            android:layout_weight="1"
	            android:layout_height="60dp"
	            android:gravity="left|center"
	            android:text="@string/member_info_birth_date"
	            android:textColor="#000000"
	            android:layout_gravity="center_vertical"
	            android:textSize="18sp" />
	        <LinearLayout
	            android:id="@+id/clear_date" 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.5"
	            android:gravity="center_vertical"
	            android:visibility="gone"
	            android:layout_gravity="center_vertical"
	            android:background="@drawable/btn_date">
	            <ImageView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/ico_clear"/>
	            <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="4dp"
		            android:gravity="center"
		            android:text="@string/clear_time"
		            android:textColor="#000000"
		            android:textSize="18sp" />
	        </LinearLayout>
		</LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/round_red_transparent" >

            <View
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:background="#80ff0000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >


                <com.dfire.retail.app.manage.wheel.widget.WheelView
                    android:id="@+id/month_wheel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent" />

                <com.dfire.retail.app.manage.wheel.widget.WheelView
                    android:id="@+id/day_wheel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/card_type_cancel"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_gary"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/card_type_confirm"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_red"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>