<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bj"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <!-- search edittext -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp" >

                <EditText
                    android:id="@+id/edit_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/user_info_search"
                    android:ems="10"
                    android:hint="@string/hint_storenamesearch"
                    android:paddingLeft="30dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#99ffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/edit_user_name_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:paddingLeft="15dp"
                    android:text="查询"
                    android:textSize="20sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/store_info_detail_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:cacheColorHint="#00000000"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:scrollbars="none" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/store_logo"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/user_info_bg_02"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="20dp" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="addClick"
                    android:paddingTop="10dp"
                    android:src="@drawable/ico_add"
                    android:tag="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:text="@string/store_add_logo"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="10dp"
                    android:paddingTop="30dp"
                    android:text="@string/store_image_size"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/store_image_type"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
            <!-- Textview -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/add_text_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/img_transbox"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="下属店家2个"
                    android:textColor="#ffffff"
                    android:textColorHint="#99ffffff"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/add_sub_store"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/add_little" />
            </LinearLayout>

            <ListView
                android:id="@+id/sub_store_info_detail_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:cacheColorHint="#00000000"
                android:scrollbars="none" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@null"
                android:drawableLeft="@drawable/add_red"
                android:gravity="center_vertical"
                android:text="添加下属店加..."
                android:textColor="@color/red" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>